force-app/main/default/objects/AI_Configure__c/AI_Configure__c.object-meta.xml
<CustomObject>
    <label>AI Configure</label>
    <nameField>
        <label>AI Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Configure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
<!-- Gitting -->
</CustomObject>