force-app/main/default/objects/AI_Configure__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
<!-- Gitting -->
</CustomField>