force-app/main/default/objects/AI_Configure__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
<!-- Gitting -->
</CustomField>