force-app/main/default/objects/AI_Configure__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>glm-4.5-air</fullName>
                <default>true</default>
                <label>zApi</label>
            </value>
            <value>
                <fullName>gpt-5.4-mini</fullName>
                <label>ChatGPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
<!-- Gitting -->
</CustomField>