force-app/main/default/objects/AI_Configure__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>