force-app/main/default/objects/AI_Configure__c/fields/Response_Content_Path__c.field-meta.xml
<CustomField>
    <fullName>Response_Content_Path__c</fullName>
    <label>Response Content Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>