force-app/main/default/objects/AI_Configure__c/fields/Scheduler_Retry_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Retry_Hours__c</fullName>
    <label>Scheduler Retry Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
<!-- Gitting -->
</CustomField>