force-app/main/default/objects/AI_Configure__c/fields/System_prompt__c.field-meta.xml
<CustomField>
    <fullName>System_prompt__c</fullName>
    <label>System prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>