force-app/main/default/objects/AI_Configure__c/fields/User_Prompt__c.field-meta.xml
<CustomField>
    <fullName>User_Prompt__c</fullName>
    <label>User Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>